--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             </article>
         </section>
         <footer>
-            <a href="https://www.facebook.com/groups/1384547115459598" target="_blank"><img class="fb" src="Images/fb.jpg" alt="FB"></a>
+            <a href="https://www.facebook.com/groups/1384547115459598" target="_blank"><img class="fb" src="images/fb.jpg" alt="FB"></a>
             <div class="icons"></div>
-          <a href="https://www.youtube.com/@lsGeolab" target="_blank"><img class="yt" src="Images/yt.jpg" alt="YT"></a>
+          <a href="https://www.youtube.com/@lsGeolab" target="_blank"><img class="yt" src="images/yt.jpg" alt="YT"></a>
           </footer>
         </div>
     </body>
