--- a/pages/news.html
+++ b/pages/news.html
@@ -53,9 +53,9 @@
     </div>
     <div class="container">
         <footer>
-            <a href="https://www.facebook.com/groups/1384547115459598" target="_blank"><img class="fb1" src="../Images/fb.jpg" alt="FB"></a>
+            <a href="https://www.facebook.com/groups/1384547115459598" target="_blank"><img class="fb1" src="../images/fb.jpg" alt="FB"></a>
             <div class="icons"></div>
-          <a href="https://www.youtube.com/@lsGeolab" target="_blank"><img class="yt1" src="../Images/yt.jpg" alt="YT"></a>
+          <a href="https://www.youtube.com/@lsGeolab" target="_blank"><img class="yt1" src="../images/yt.jpg" alt="YT"></a>
         </footer>
       </div>
     </body>
